# vpn_server_task

./: LICENSE  README.md  pyproject.toml
vpn_server/: manage.py
vpn_server/server/: forms.py  models.py  urls.py  views.py
vpn_server/server/migrations/: 0001_initial.py  0002_userswebsite_websitestatistics_delete_vpnstat.py
vpn_server/server/templates/server/: base.html  create_website.html  index.html  user_stats.html  website_detail.html  website_list.html  website_statistics.html
vpn_server/users/: forms.py  urls.py  views.py
vpn_server/users/templates/users/: logout.html  signin.html  signup.html
vpn_server/vpn_server/: asgi.py  settings.py  urls.py  wsgi.py
