[tool.poetry]
name = "vpn-server-task"
version = "0.1.0"
description = ""
authors = ["Kiril Sheremeta <120675223+kirilsheremeta@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "vpn_server_task"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
alembic = "^1.12.0"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
